# object-storage-api

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/object_storage/: __init__.py  app.py  routes.py  storage.py
tests/: __init__.py  test_api.py
